@@ -1,3 +1,8 @@
+2008-11-09  Wakaba  <wakaba@suika.fam.cx>
+
+	* Element.pm (inner_html): Setter for HTML element nodes
+	implemented.
+
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
 	* Document.pm (inner_html): Use Whatpm::XML::Parser for XML
