@@ -1,3 +1,7 @@
+2008-10-29  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTTP.pm (remote_user): New method.
+
 2007-09-23  Wakaba  <wakaba@suika.fam.cx>
 
 	* Makefile (all): |Carp.html| is added.
